RESOLVED FIXED144851
We shouldn't promote LoadVarargs to a sequence of GetStacks and PutStacks if doing so would exceed the LoadVarargs' limit
https://bugs.webkit.org/show_bug.cgi?id=144851
Summary We shouldn't promote LoadVarargs to a sequence of GetStacks and PutStacks if ...
Filip Pizlo
Reported 2015-05-10 17:43:14 PDT
Patch forthcoming.
Attachments
the patch (11.73 KB, patch)
2015-05-10 17:55 PDT, Filip Pizlo
msaboff: review-
the patch (9.86 KB, patch)
2015-05-11 10:58 PDT, Filip Pizlo
msaboff: review+
Filip Pizlo
Comment 1 2015-05-10 17:55:09 PDT
Created attachment 252833 [details] the patch
Michael Saboff
Comment 2 2015-05-11 09:02:35 PDT
Comment on attachment 252833 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=252833&action=review Break out the new forceEagerCompilation option into a separate patch. After that I'll r+ both patches. > Source/JavaScriptCore/ChangeLog:29 > + compilation, and then running layout tests tests with this mode. Duplicate "tests"
Filip Pizlo
Comment 3 2015-05-11 10:58:20 PDT
Created attachment 252867 [details] the patch
Michael Saboff
Comment 4 2015-05-11 11:02:39 PDT
Comment on attachment 252867 [details] the patch r=me
Filip Pizlo
Comment 5 2015-05-11 11:19:48 PDT
Note You need to log in before you can comment on or make changes to this bug.